--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 </div>
 <div class="contact-info" >
     <span><i class="fas fa-phone-alt"></i> <a href="tel:+919036672340">+919036672340</a></span>
-    <span><i class="fas fa-envelope"></i> <a href="mailto:SLK@gmail.com">about@sltblr@gmail.com</a></span>
+    <span><i class="fas fa-envelope"></i> <a href="mailto:SLK@gmail.com">booksltblr@gmail.com</a></span>
     
     
 </div>
