--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 
 <section class="About" id="About">
 
-    <h1 class="heading"><span>ABOUT PACKAGES</span></h1>
+    <h1 class="heading"><span>ABOUT US</span></h1>
     <br />
     <div class="row">
 
@@ -189,12 +189,10 @@
 
  
 <!-- packages section starts  -->
-
+<h1 class="heading"><span>PACKAGES</span></h1><br />
 <section class="packages" id="packages">
-    <!--<h1 class="heading"><span>PACKAGES</span></h1> */ -->
-  
-<br />
-<br />
+   
+
 
     <div class="box-container">
         <div class="box">
