--- a/index.html
+++ b/index.html
@@ -235,10 +235,13 @@
 <!-- packages section ends -->
 <br />
 <section class="Review" id="Review">
+
+<!-- Elfsight Google Reviews | Untitled Google Reviews -->
 <script src="https://static.elfsight.com/platform/platform.js" async></script>
-<div class="elfsight-app-faf18a0b-80e5-477a-91e4-57ff19a7cdc2" data-elfsight-app-lazy></div>
+<div class="elfsight-app-0af47afd-79b9-4e0d-8a45-77add071bbd1" data-elfsight-app-lazy></div>
 
 </section>
+
 <!-- contact section starts  -->
 <section class="contact" id="contact">
 
